cl-popup: fixed content padding on small screens

--- a/less/cl-popup.less
+++ b/less/cl-popup.less
@@ -267,10 +267,7 @@
 				padding-right: 55px;
 			}
 			&-content {
-				padding: 50px 25px 25px !important;
-			}
-			&-title + &-content {
-				padding-top: 25px !important;
+				padding: 25px !important;
 			}
 		}
 		
